--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2"
-  }
+  },
+  "homepage": "http://nonlefthanded.com/experiments/tacovore"
 }
